--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
         <link rel="stylesheet" href="assets/lecteurVero.css">
         <link rel="stylesheet" href="assets/playerVero.css">
         <link rel="stylesheet" href="assetsTV/video.css">
+        <link rel="stylesheet" href="style.css">
     </head>
 
     <body>
