--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
         <link rel="stylesheet" href="assets/lecteurVero.css">
         <link rel="stylesheet" href="assets/playerVero.css">
         <link rel="stylesheet" href="assetsTV/video.css">
-        <link rel="stylesheet" href="/style.css">
+        <link rel="stylesheet" href="style.css">
     </head>
 
     <body>
@@ -646,7 +646,7 @@ function ajouteVideo() {
         <script src="assets/jMouseWheel-1.0.min.js" type = "text/javascript"></script>
         <script src="assets/jquery-ui.js" type="text/javascript"></script>
         <script src="assets/prism.js" type="text/javascript"></script>
-        <script src="assets/script.js" type="text/javascript"></script>
+        <script src="script.js" type="text/javascript"></script>
         <script src="assets/lecteurVero.js" type="text/javascript"> </script>
         <script src="assets/playerVero.js"type="text/javascript"></script>
         <script src="assets/api.js"type="text/javascript"></script>
