--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
         <meta charset="utf-8">
         <title>Projet Médias - Audio / Vidéo</title>
         <link rel="stylesheet" href="assets/prism.css">
-        <link rel="stylesheet" href="assets/style.css">
+        <link rel="stylesheet" href="/style.css">
         <link rel="stylesheet" href="assets/lecteurVero.css">
         <link rel="stylesheet" href="assets/playerVero.css">
         <link rel="stylesheet" href="assetsTV/video.css">
@@ -643,7 +643,7 @@ function ajouteVideo() {
         </div>
         <!-- Fin Container -->
         <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.2.4/jquery.min.js"></script>
-        <script src="assets/jMouseWheel-1.0.min.js" type = "text/javascript"></script>
+        <script src="/jMouseWheel-1.0.min.js" type = "text/javascript"></script>
         <script src="assets/jquery-ui.js" type="text/javascript"></script>
         <script src="assets/prism.js" type="text/javascript"></script>
         <script src="script.js" type="text/javascript"></script>
